<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StandardSupply</string>
    <string name="logo_img_description">Standard Supply Logo</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_string">Log In</string>
    <string name="forgot_password_button_string">Forgot Password</string>
    <string name="sign_up_button_string">Sign Up</string>
    <string name="reset_button_string">Reset</string>
    <string name="profile">Profile</string>
    <string name="add_items">Add Items</string>
    <string name="restore">Restore</string>
    <string name="notifications">notifications</string>
    <string name="help">Help</string>
    <string name="scan">Scan</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="first_name">First Name</string>
    <string name="company_name">Company Name</string>
    <string name="full_name">Full Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="customer_id">Customer Id</string>
    <string name="customer_id_hint">Customer Id: Numerical 6 digits only</string>
    <string name="truck_id">Truck Id</string>
    <string name="password">Password: 8 characters minimum</string>
    <string name="reconfirm_password">Confirm New Password</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Log out</string>
    <string name="save">Save</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="cancel">Cancel</string>
    <string name="search_category">Search&#8230;</string>
    <string name="no_item_image">No Item Image</string>
    <string name="pick_up_now">Pick up this item now</string>
    <string name="home_tab">Home</string>
    <string name="add_new_jobNo">Add a new job number</string>
    <string name="truck_no">Truck No:</string>
    <string name="change">Change</string>
    <string name="enter_po">ENTER PO NUMBER: (REQD.)</string>
    <string name="choose_your_branch">CHOOSE YOUR BRANCH</string>
    <string name="please_choose">PLEASE CHOOSE:</string>
    <string name="will_call">WILL CALL</string>
    <string name="delivery">DELIVERY</string>
    <string name="submit">Submit</string>
    <string name="done">Done</string>
    <string name="choose_address">Please choose an address:</string>
    <string name="add_new_address">Add a new address</string>
    <string name="next">Next</string>
    <string name="po">PO Number:</string>
    <string name="location">Location</string>
    <string name="order">Order</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="add_address">Add Address</string>
    <string name="my_orders">My Orders</string>
    <string name="light">Light</string>
    <string name="getImage_button">Get Image</string>
    <string name="done_button">Done</string>
    <string name="guidance_string">Try moving the camera close to each part of the barcode</string>
    <string name="url_my_link_drive">http://www.mylinkdrive.com/</string>
    <string name="url_ssdhvac">http://www.ssdhvac.com/</string>
    <string name="url_goodmanmfg">http://mobile.goodmanmfg.com</string>
    <string name="add_truck">Add Truck</string>
    <string name="truck_name">Truck Name</string>
    <string name="cart">Cart</string>
    <string name="delivery_address">Delivery Address:</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="enter_order_notes">Enter Order Notes</string>
    <string name="tab_to_add_order_notes">Tap to add order notes</string>
    <string name="email_type">ex: myname@example.com</string>
    <string name="contact_info">Contact info is required so we may contact you regarding your request.</string>
    <string name="part_desc">Part Number(s) or Description(s)</string>
    <string name="job_no">Enter Job No</string>
    <string name="po_no">Enter PO No</string>
    <string name="add_additional_item">Add Additional Items</string>

    <string-array name="drawer_titles">
        <item>Home</item>
        <item>Search</item>
        <item>Scan</item>
        <item>Favorites</item>
        <item>Cart</item>
        <item>My Order</item>
    </string-array>

</resources>