<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingTop="100dp"
    android:orientation="vertical" >
    
    <EditText android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/txtName"
        android:hint="@string/name"/>
    
    <EditText android:layout_width="match_parent"
        android:id="@+id/txtAddress"
        android:layout_height="35dp"
        android:layout_margin="5dp"
        android:hint="@string/address"/>
    
    
    <EditText android:layout_width="match_parent"
        android:id="@+id/txtCity"
        android:layout_height="35dp"
        android:layout_margin="5dp"
        android:hint="@string/city"/>
    
    
    <EditText android:layout_width="match_parent"
        android:id="@+id/txtState"
        android:layout_height="35dp"
        android:layout_margin="5dp"
        android:hint="@string/state"/>
    
    
    <EditText android:layout_width="match_parent"
        android:id="@+id/txtZip"
        android:layout_height="35dp"
        android:layout_margin="5dp"
        android:hint="@string/zip"/>
    
     <Button
         android:layout_margin="10dp"
        android:id="@+id/btnAdd"
        android:onClick="onResetClick"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/ss_green"
        android:text="@string/add_address" />
    

</LinearLayout>
</ScrollView>
