<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:clickable="true"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_img_description"
        android:src="@drawable/ss_large_logo" />
     
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnScan"
            android:src="@drawable/scan_btn"
            android:layout_weight="1"
            android:contentDescription="@string/scan" />
       <ImageView
           android:layout_weight="1"           
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSearch"
            android:src="@drawable/search_btn"
            android:contentDescription="@string/search" /> 
	</LinearLayout>
	
    <ImageView
        	android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:id="@+id/btnFavorites"
            android:src="@drawable/favorites_btn"
            android:contentDescription="@string/favorites" />
       
    
   
</LinearLayout>