<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_po"
            android:textColor="@color/ss_green" />

        <EditText
            android:id="@+id/txtPO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:inputType="textPersonName"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtChooseBranch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_branch"
            android:textColor="@color/ss_green" />

        <LinearLayout
            android:id="@+id/layoutBranch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/txtBranchId"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:focusable="false"
                android:inputType="textPersonName"
                android:maxLines="2"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/btnDropDown"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/no_item_image"
                android:src="@drawable/dropdown_btn" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_choose"
            android:textColor="@color/ss_green" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnWillCall"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@color/light_gray"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <ImageView
            android:id="@+id/imgWillCall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/no_item_image"
            android:src="@drawable/check_icn"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txtWillCall"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/will_call"
            android:textColor="@color/gray"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnDelivery"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/light_gray"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <ImageView
            android:id="@+id/imgDelivery"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/no_item_image"
            android:src="@drawable/check_icn"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txtDelivery"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/delivery"
            android:textColor="@color/gray"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <Button
            android:id="@+id/btnAddOrderNotes"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="20dp"
            android:background="@color/ss_green"
            android:text="@string/tab_to_add_order_notes" />


            <!-- Here add your edittexts or whatever will scroll. -->
        <EditText
            android:id="@+id/txtOrderNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="5dp"
            android:isScrollContainer="true"
            android:layout_marginTop="10dp"
            android:inputType="textMultiLine"
            android:hint="@string/enter_order_notes"
            android:imeOptions="flagNoFullscreen"
            android:textSize="16sp"
            android:visibility="invisible" />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" />

</LinearLayout>




</ScrollView>