<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".HomeActivity" >


        <EditText
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/txtJobNo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/job_no" >
        </EditText>

        <EditText
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/txtPONo"
            android:layout_below="@+id/txtJobNo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/po_no" >
        </EditText>

        <ListView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/lstAddItems"
            android:layout_below="@+id/txtPONo"
            android:layout_above="@+id/btnSubmit"
            android:scrollbars="vertical"
            android:layout_gravity="fill_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </ListView>

        <Button
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/btnAddItem"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:background="@color/ss_green"
            android:text="@string/add_additional_item" />

        <Button
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_above="@id/btnAddItem"
            android:layout_marginBottom="20dp"
            android:background="@color/ss_green"
            android:text="@string/submit" />

        <RelativeLayout
            android:id="@+id/progressBarLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/gray"
            android:alpha="0.7"
            android:visibility="gone"
            >
                <ProgressBar
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />
        </RelativeLayout>


</RelativeLayout>