<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".HomeActivity" >

    <LinearLayout
        android:id="@+id/detailsId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imgItemImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/no_item_image"
            android:src="@drawable/no_item_image" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/btnFavorite"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/no_item_image"
                android:src="@drawable/star_icn" />

            <TextView
                android:id="@+id/txtItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/add_items"
                android:textSize="22sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txtItemDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_items"
            android:textColor="@color/gray"
            android:textSize="16sp" />
        
            <TextView
            android:id="@+id/txtItemNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_items"
            android:textColor="@color/gray"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnPickUp"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@color/ss_green"
        android:text="@string/pick_up_now" />
    
    <Button
        android:id="@+id/btnAddToCart"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_above="@id/btnPickUp"
        android:layout_marginBottom="20dp"
        android:background="@color/ss_green"
        android:text="@string/add_to_cart" />
    
     

</RelativeLayout>